--- a/DBFirst/DBFirst.csproj
+++ b/DBFirst/DBFirst.csproj
@@ -63,7 +63,7 @@
     <Compile Include="funcGetAuthorCourses_Result.cs">
       <DependentUpon>PlutoModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="GetCourses_Result.cs">
+    <Compile Include="GetCoursesResult.cs">
       <DependentUpon>PlutoModel.tt</DependentUpon>
     </Compile>
     <Compile Include="PlutoModel.Context.cs">
