--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,28 @@
 /DBFirst/obj/Debug/edmxResourcesToEmbed/PlutoModel.csdl
 /DBFirst/obj/Debug/edmxResourcesToEmbed/PlutoModel.msl
 /DBFirst/obj/Debug/edmxResourcesToEmbed/PlutoModel.ssdl
+/DBFirst/obj/Debug/TempPE/VidzyModel.Context.cs.dll
+/DBFirst/obj/Debug/TempPE/VidzyModel.Designer.cs.dll
+/DBFirst/obj/Debug/TempPE/VidzyModel.cs.dll
+/Vidzy/bin/Debug/EntityFramework.SqlServer.dll
+/Vidzy/bin/Debug/EntityFramework.SqlServer.xml
+/Vidzy/bin/Debug/EntityFramework.dll
+/Vidzy/bin/Debug/EntityFramework.xml
+/Vidzy/bin/Debug/Vidzy.exe
+/Vidzy/bin/Debug/Vidzy.exe.config
+/Vidzy/bin/Debug/Vidzy.pdb
+/Vidzy/obj/Debug/CoreCompileInputs.cache
+/Vidzy/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+/Vidzy/obj/Debug/TempPE/Vidzy.Context.cs.dll
+/Vidzy/obj/Debug/TempPE/Vidzy.Designer.cs.dll
+/Vidzy/obj/Debug/TempPE/Vidzy.cs.dll
+/Vidzy/obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
+/Vidzy/obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
+/Vidzy/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+/Vidzy/obj/Debug/Vidzy.csproj.FileListAbsolute.txt
+/Vidzy/obj/Debug/Vidzy.csprojResolveAssemblyReference.cache
+/Vidzy/obj/Debug/Vidzy.exe
+/Vidzy/obj/Debug/Vidzy.pdb
+/Vidzy/obj/Debug/edmxResourcesToEmbed/Vidzy.csdl
+/Vidzy/obj/Debug/edmxResourcesToEmbed/Vidzy.msl
+/Vidzy/obj/Debug/edmxResourcesToEmbed/Vidzy.ssdl
