--- a/Vidzy/App.config
+++ b/Vidzy/App.config
@@ -7,7 +7,9 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
   </startup>
-  <connectionStrings><add name="PlutoDBContext" connectionString="metadata=res://*/PlutoModel.csdl|res://*/PlutoModel.ssdl|res://*/PlutoModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ANATOLI-PC;initial catalog=Pluto;persist security info=True;user id=sa;password=p2562w3g;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="VidzyEntities" connectionString="metadata=res://*/VidzyModel.csdl|res://*/VidzyModel.ssdl|res://*/VidzyModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ANATOLI-PC;initial catalog=Vidzy;persist security info=True;user id=sa;password=p2562w3g;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+  <connectionStrings>
+    <add name="VidzyEntities" connectionString="metadata=res://*/Vidzy.csdl|res://*/Vidzy.ssdl|res://*/Vidzy.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=ANATOLI-PC;initial catalog=Vidzy;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
